--- a/components/_nav-tabs.scss
+++ b/components/_nav-tabs.scss
@@ -1,11 +1,13 @@
 // Override some of Bootstrap's styling for nav-tabs
 .nav-tabs {
-  min-height: 44px;
+  //min-height: 44px;
   max-height: 6%;
+  border-color: #dee2e6;
   // Each li represents a tab
   li {
     // Clickable link within tab
     a {
+      max-height: 6%;
       // Button that deletes tab
       button {
         margin-left: 10px;
