--- a/components/_package-list.scss
+++ b/components/_package-list.scss
@@ -1,6 +1,9 @@
 // List containing multiple packages
 .package-list{
   padding: 0 1em;
+  margin-bottom: 0;
+  height: 93.62%;
   list-style: none;
   overflow-y: scroll;
+  overflow-x: scroll;
 }
