--- a/components/_project-explorer.scss
+++ b/components/_project-explorer.scss
@@ -1,14 +1,22 @@
 // Represents the side bar explorer
 .project-explorer {
   // Should be 100% - navbar height
-  max-height: inherit;
+  height: 100%;
 
   // Heading for explorer
   h2 {
     // Should be the same as nav-tabs
-    height: 6%;
-    font-size: .8em;
-    border-bottom: solid 1px #d3d3d3;
-    margin: 0;
+    margin: 2px;
+    //height: 6%;
+    position: absolute;
+    font-size: 2vw;
+    font-weight: normal;
+    bottom: 0;
   }
+}
+
+.explorer-header {
+  position: relative;
+  border-bottom: solid 1px #dee2e6;
+  height: 6.38%;
 }
