--- a/layout/_explorer-container.scss
+++ b/layout/_explorer-container.scss
@@ -2,5 +2,5 @@
 // Redundant with project-explorer
 .explorer-container {
   // Should be 100% - navbar height
-  max-height: inherit;
+  height: 94%;
 }
